# quiz-api

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: docs.rs  main.rs  routes.rs
src/db/: mod.rs  seeder.rs  setup.rs
src/handlers/: class_handler.rs  dashboard_handler.rs  mod.rs  score_handler.rs  session_handler.rs  student_handler.rs  subject_handler.rs  teacher_handler.rs
src/models/: class.rs  mod.rs  score.rs  session.rs  student.rs  subject.rs  teacher.rs
src/repositories/: class_repo.rs  mod.rs  score_repo.rs  session_repo.rs  student_repo.rs  subject_repo.rs  teacher_repo.rs
