[package]
name = "quiz"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde_json = "1.0"
local-ip-address = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
utoipa = "4"
utoipa-swagger-ui = { version = "6", features = ["axum"] }
qrcodegen = "1.8"
